--- a/final_version/root.tex
+++ b/final_version/root.tex
@@ -11,10 +11,6 @@
 
 \overrideIEEEmargins                                      % Needed to meet printer requirements.
 
-
-
-
-
 \usepackage{cite}
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{algorithmic}
@@ -124,7 +120,7 @@ The instantaneous travel time for a given segment of road is the average time th
 
 \begin{figure}[htbp]
 	\centerline{\includegraphics[width=\linewidth]{./images/Traveltime_example2.jpg}}
-	\caption{Travel times on link 117007401 in the M6 over three weeks.}
+	\caption{M6 travel times (seconds), link 117007401, over three weeks.}
 	\label{fig:travel_time_example}
 \end{figure}
 
